Trying to fix padding issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,8 @@ body {
 
 html, body {
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .container {
@@ -22,6 +24,7 @@ header {
   text-align: center;
   padding: 1em 0;
   background-color: #D24649;
+  width: 100%;
 }
 
 #logo {
